# zygote

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: codec.rs  error.rs  fd.rs  fds.rs  lib.rs  pipe.rs  wire.rs
src/pipe/: stream.rs
tests/: basic.rs
