[package]
name = "zygote"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmp-serde = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
nix = { version = "0.29", features = ["socket", "uio"] }

[dev-dependencies]
nix = { version = "*", features = ["process"]}
