[package]
name = "zygote"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jprendes/zygote"
homepage = "https://github.com/jprendes/zygote"

[dependencies]
rmp-serde = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
nix = { version = "0.29", features = ["socket", "uio", "signal"] }

[dev-dependencies]
nix = { version = "*", features = ["process"]}
