[package]
name = "zygote"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
description = "A zygote process is a small process used primarily to create new processes."
repository = "https://github.com/jprendes/zygote"
homepage = "https://github.com/jprendes/zygote"

[dependencies]
rmp-serde = "1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
nix = { version = "0.29", features = ["socket", "uio", "signal", "sched", "process"] }

[features]
default = ["clone3"]
clone3 = []